update /subject test dev server info
